ingress/grafana-dashborad.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitor
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.han.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 80
