ingress/tomcat.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: tomcat.han.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tomcat
          servicePort: 8080
