ingress/web.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: web.han.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
